[gd_scene load_steps=6 format=3 uid="uid://loasfjsjmqm6"]

[ext_resource type="Script" path="res://scene/level1/victory.gd" id="1_ycrew"]

[sub_resource type="Gradient" id="Gradient_6l7fw"]
colors = PackedColorArray(0.582277, 1.60275e-05, 0.422842, 1, 0.831774, 0.709785, 0.966322, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_u2xc7"]
noise_type = 4
seed = 4

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_vgnnx"]
color_ramp = SubResource("Gradient_6l7fw")
noise = SubResource("FastNoiseLite_u2xc7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_58jt4"]
texture = SubResource("NoiseTexture2D_vgnnx")

[node name="Victory" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ycrew")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 334.0
offset_top = 29.0
offset_right = 815.0
offset_bottom = 611.0
theme_override_styles/panel = SubResource("StyleBoxTexture_58jt4")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.5
offset_top = -291.0
offset_right = 240.5
offset_bottom = 291.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "VICTORY"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Panel/MarginContainer/VBoxContainer/Label"]
layout_mode = 2
offset_top = 196.0
offset_right = 481.0
offset_bottom = 466.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/Label/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/Label/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Final score: 0"

[node name="NextButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Label/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Next"

[node name="Mainmenu" type="Button" parent="Panel/MarginContainer/VBoxContainer/Label/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Main Menu"

[node name="QuitButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Label/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Label/CenterContainer/VBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Label/CenterContainer/VBoxContainer/Mainmenu" to="." method="_on_mainmenu_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Label/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
